# mughead_walker

./: .gitignore  README.md  claude.md  pyproject.toml
docs/baseline/: ppo_baseline_eval.json  ppo_baseline_report.md  ppo_waist_eval.json
docs/superpowers/plans/: 2026-04-17-mughead-walker-env.md  2026-04-18-waist-joint.md  2026-04-20-directory-restructure.md
docs/superpowers/specs/: 2026-04-17-mughead-walker-env-design.md  2026-04-18-waist-joint-design.md  2026-04-20-directory-restructure-design.md
examples/: evaluate.py  manager.py  random_agent.py  train_ppo.py
mughead_walker/: __init__.py  mughead_walker.py
notebooks/: mughead_walker_colab.ipynb
scripts/: play.sh  setup.sh  train.sh
tests/: test_config_params.py  test_env.py  test_mug_hull.py  test_observation.py  test_payloads.py  test_registration.py  test_rendering.py  test_reward_and_loss.py  test_setup.py  test_waist_joint.py
tools/: manager.py  plot_curves.py
training/: evaluate.py  train_ppo.py
